handle touch event on play ground / 소스 정리

--- a/res/layout/activity_play_time_record.xml
+++ b/res/layout/activity_play_time_record.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <com.example.test_team_manager.view.PlayTimerView
+    <bd.football.coachbook.view.PlayTimerView
         android:id="@+id/playTimerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
