--- a/res/layout/activity_play_ground.xml
+++ b/res/layout/activity_play_ground.xml
@@ -1,31 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" >
 
+    <bd.football.coachbook.view.PlayGroundView
+        android:id="@+id/playGroundView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <LinearLayout
         android:id="@+id/lly_control_layer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="horizontal" >
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onClickAddPlayer"
             android:text="+" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onClickRemovePlayer"
             android:text="-" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:onClick="onClickClearPlayer"
             android:text="Clear" />
 
         <Spinner
@@ -34,10 +37,4 @@
             android:layout_height="match_parent" />
     </LinearLayout>
 
-    <com.example.test_team_manager.view.PlayGroundView
-        android:id="@+id/playGroundView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/lly_control_layer" />
-
-</RelativeLayout>
+</FrameLayout>
